# project-management-api-ufrpe

./: Dockerfile  LICENSE  README.md  api.py  compose.yaml  pyproject.toml  test.py
app/: api.py  db.py  mock.py
